--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "lifx-tool"
 version = "0.1.0"
 authors = ["William Young <wil.wyo@gmail.com>"]
 edition = "2018"
+description = "A cli tool and bridge implementing the lifx lan protocol v2.0"
 
 [dependencies]
 num-derive = "^0.3"
