--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2018"
 description = "A cli tool and bridge implementing the lifx lan protocol v2.0"
 
 [dependencies]
+anyhow = "^1.0"
+lifx-core = "^0.2"
 log = "^0.4"
-num-derive = "^0.3"
-num-traits = "^0.2"
 serde = "^1.0"
 simplelog = "^0.9"
 structopt = "^0.3"
+thiserror = "^1.0"
